; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-base.c_handle_is_ancestor.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-base.c_handle_is_ancestor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"--is-ancestor takes exactly two commits\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @handle_is_ancestor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_is_ancestor(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.commit*, align 8
  %7 = alloca %struct.commit*, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 2
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 @die(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %10, %2
  %13 = load i8**, i8*** %5, align 8
  %14 = getelementptr inbounds i8*, i8** %13, i64 0
  %15 = load i8*, i8** %14, align 8
  %16 = call %struct.commit* @get_commit_reference(i8* %15)
  store %struct.commit* %16, %struct.commit** %6, align 8
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 1
  %19 = load i8*, i8** %18, align 8
  %20 = call %struct.commit* @get_commit_reference(i8* %19)
  store %struct.commit* %20, %struct.commit** %7, align 8
  %21 = load %struct.commit*, %struct.commit** %6, align 8
  %22 = load %struct.commit*, %struct.commit** %7, align 8
  %23 = call i64 @in_merge_bases(%struct.commit* %21, %struct.commit* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %27

26:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %25
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @die(i8*) #1

declare dso_local %struct.commit* @get_commit_reference(i8*) #1

declare dso_local i64 @in_merge_bases(%struct.commit*, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
